--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App-header {
   background-color: #00b386;
-  padding: 20px;
+  padding: 10px;
   color: white;
   display: flex;
   justify-content: center;
@@ -18,3 +18,6 @@
   font-size: large;
 }
 
+.Units {
+  display: flex;
+}
