--- a/src/Components/AppLogo/AppLogo.css
+++ b/src/Components/AppLogo/AppLogo.css
@@ -1,7 +1,7 @@
 .App-logo {
-  animation: App-logo-spin infinite 3s alternate;
-  height: 50px;
-  margin-right: 20px;
+  //animation: App-logo-spin infinite 3s alternate;
+  height: 30px;
+  margin-right: 10px;
 }
 
 @keyframes App-logo-spin {
